--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -24,6 +24,15 @@
         "code"
       ]
     },
+     {
+      "login": "gautam-arya",
+      "name": "Gautam",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/54665036?v=4",
+      "profile": "#",
+      "contributions": [
+        "code"
+      ]
+    },
     {
       "login": "prithvirajbytes",
       "name": "Prithviraj Biswas",
